# mini_faucet

./: README.md
.github/workflows/: rust.yml
Faucet_Cli/: Cargo.toml
Faucet_Cli/src/: claim.rs  main.rs  prelude.rs
Faucet_Cli/src/components/: app.rs  mod.rs  tui.rs  ui.rs  ui_buttons.rs
compiler/: hardhat.config.js  package-lock.json  package.json
compiler/contracts/: MiniFaucet.sol
faucet-backend/: Cargo.toml  README.md
faucet-backend/src/: app.rs  cors.rs  main.rs  middleware.rs
faucet-backend/src/blockchain/: contract.rs  imports.rs  mod.rs  read.rs  write.rs
faucet-backend/src/handlers/: read.rs  write.rs
faucet-frontend/: Cargo.toml  Dioxus.toml  package-lock.json
faucet-frontend/assets/: faucet-frontend-dxh6b4b8588fdfe270.js  tailwind.css
faucet-frontend/src/: imports.rs  main.rs
faucet-frontend/src/components/: claim.rs  claim_input.rs  contribute.rs  faucet_balance.rs  home.rs  mod.rs  my_balance.rs
interacter_and_deployer/: Cargo.toml
interacter_and_deployer/src/: deploy.rs  main.rs  read.rs  write.rs
interacter_and_deployer/src/artifacts/: MiniFaucet.json
