[package]
name = "faucet-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-extensible-rate-limit = "0.4.0"
actix-web = "4.13.0"
alloy = { version = "1.7.3", features = ["full", "serde"] }
chrono = "0.4.44"
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "rt", "rt-multi-thread"] }

