[package]
name = "faucet-frontend"
version = "0.1.0"
authors = ["eccentric"]
edition = "2021"


[dependencies]
dioxus = { version = "0.7.1", features = [] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
